--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@1,700&family=Poppins:wght@300&family=Tangerine:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/pfd/styles.css">
+    <link rel="stylesheet" href="pfd/styles.css">
     <title>Portfolio</title>
 </head>
 <body>
@@ -338,7 +338,7 @@
         
     </div>
     
-    <script src="/pfd/script.js"></script>
+    <script src="pfd/script.js"></script>
 
 </body>
 </html>
