--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@1,700&family=Poppins:wght@300&family=Tangerine:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="pfd/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Portfolio</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
     <div class="parent">
         <div class="topnav">
             <div class="logo">
-                    <img class="myImg" src="/images/code3.png" alt="logo">
+                    <img class="myImg" src="images/code3.png" alt="logo">
             </div>
             <div class="menu">
                 <ul>
@@ -225,7 +225,7 @@
                 <div class="cd">
                     <div class="box">
                         <div class="content">
-                            <img src="/images/gaming.jpg" alt="">
+                            <img src="images/gaming.jpg" alt="">
                             <h3>Favorite Titles</h3>
                             <ul>
                                 <li>GTA Series</li>
@@ -241,7 +241,7 @@
                 <div class="cd">
                     <div class="box">
                         <div class="content">
-                            <img src="/images/football.jpg" alt="">
+                            <img src="images/football.jpg" alt="">
                             <h3>Favorite Players</h3>
                             <ul>
                                 <li>Cristiano Ronaldo</li>
@@ -257,7 +257,7 @@
                 <div class="cd">
                     <div class="box">
                         <div class="content">
-                            <img src="/images/books1.jpg" alt="">
+                            <img src="images/books1.jpg" alt="">
                             <h3>Books I adore</h3>
                             <ul>
                                 <li>Sherlock Homes</li>
@@ -272,7 +272,7 @@
                 <div class="cd">
                     <div class="box">
                         <div class="content">
-                            <img src="/images/music.jpg" alt="">
+                            <img src="images/music.jpg" alt="">
                             <h3>Favorite Artists</h3>
                             <ul>
                                 <li>Ludwig Van Beethoven</li>
@@ -338,7 +338,7 @@
         
     </div>
     
-    <script src="pfd/script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
