--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <div class="cd">
                     <div class="box">
                         <div class="content">
-                            <img src="/images/books1.jpg" alt="">
+                            <img src="images/books1.jpg" alt="">
                             <h3>Books I adore</h3>
                             <ul>
                                 <li>Sherlock Homes</li>
